# Denton

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION PLAN.md  LEGACY_CODE_REMOVAL_PLAN.md  MULTIPLAYER_PROJECT_OVERVIEW.md  SERVER_ARCHITECTURE.md  Sudachi Multiplayer PRD.md  TDD_CORRECTION_SUMMARY.md  UI_UX_SPECIFICATIONS.md
build_ui_tests/: CTestTestfile.cmake  test_compilation_verification  ui_implementation_verification  ui_test_verification
docs/: README.md
src/core/multiplayer/: CMakeLists.txt  backend_factory.cpp  backend_factory.h  error_code_mapper.cpp  error_code_mapper.h  ldn_service_bridge.cpp  ldn_service_bridge.h  multiplayer_backend.h  type_translator.cpp  type_translator.h
src/core/multiplayer/common/: CMakeLists.txt  circuit_breaker.cpp  circuit_breaker.h  connection_recovery_manager.cpp  connection_recovery_manager.h  error_codes.h  error_handling.cpp  error_handling.h  graceful_degradation_manager.cpp  graceful_degradation_manager.h  network_security.cpp  network_security.h  secure_network_handler.cpp  secure_network_handler.h
src/core/multiplayer/common/tests/: CMakeLists.txt  CMakeLists_resilience.txt  README.md  test_circuit_breaker.cpp  test_compilation_verification.cpp  test_connection_recovery_manager.cpp  test_cross_component_error_propagation.cpp  test_error_code_integration.cpp  test_error_context_enhancement.cpp  test_graceful_degradation.cpp  test_resilience_integration.cpp  test_ui_error_integration.cpp  test_utf8_validation.cpp
src/core/multiplayer/common/tests/mocks/: mock_multiplayer_backend.h  mock_network_connection.h  mock_service_operation.h
src/core/multiplayer/model_a/: CMakeLists.txt  TDD_GREEN_PHASE_SUMMARY.md  i_p2p_network.h  i_relay_client.h  i_websocket_connection.h  libp2p_p2p_network.cpp  libp2p_p2p_network.h  model_a_backend.cpp  model_a_backend.h  p2p_network.cpp  p2p_network.h  p2p_network_factory.cpp  p2p_network_factory.h  p2p_network_simple.cpp  p2p_types.h  relay_client.cpp  relay_client.h  relay_protocol.cpp  relay_protocol.h  relay_types.h  room_client.cpp  room_client.h  room_messages.h  room_types.h  test_basic  test_basic_functionality.cpp  test_libp2p_integration.cpp
src/core/multiplayer/model_a/tests/: CMakeLists.txt  P2P_NETWORK_TEST_SUMMARY.md  README.md  TDD_RED_PHASE_SUMMARY.md  TEST_STRATEGY.md  mock_interfaces.h  mock_libp2p.h  mock_relay_connection.h  simple_test  simple_test.cpp  test_compilation_check.cpp  test_nat_traversal_relay.cpp  test_p2p_connection_lifecycle.cpp  test_p2p_network.cpp  test_p2p_network_config.cpp  test_p2p_performance_scalability.cpp  test_p2p_room_server_integration.cpp  test_relay_client.cpp  test_relay_protocol.cpp  test_room_client_connection.cpp  test_room_client_messages.cpp  test_room_client_reconnection.cpp  test_room_client_thread_safety.cpp  test_security_encryption.cpp  verify_p2p_red_phase.cpp  verify_tdd_red_phase.cpp
src/core/multiplayer/model_a/tests/$HOME/.claude/: loop_status__Users_jbbrack03_Sudachi_Multiplayer
src/core/multiplayer/model_a/tests/standalone_test/: CMakeLists.txt
src/core/multiplayer/model_b/: CMakeLists.txt  mdns_discovery.cpp  mdns_discovery.h  mdns_txt_records.cpp  mdns_txt_records.h  model_b_backend.cpp  model_b_backend.h
src/core/multiplayer/model_b/platform/android/: wifi_direct_permission_manager.cpp  wifi_direct_permission_manager.h  wifi_direct_wrapper.cpp  wifi_direct_wrapper.h
src/core/multiplayer/model_b/platform/windows/: CMakeLists.txt  mobile_hotspot_capabilities.cpp  mobile_hotspot_capabilities.h  mobile_hotspot_manager.cpp  mobile_hotspot_manager.h  test_windows_capability_detector.cpp  test_winrt_integration.cpp  windows_capability_detector.cpp  windows_capability_detector.h  windows_types.h
src/core/multiplayer/model_b/test_build/: simple_test.cpp  txt_test  txt_test.cpp  verify_implementation  verify_implementation.cpp  wifi_test.cpp
src/core/multiplayer/model_b/test_build/$HOME/.claude/: loop_status__Users_jbbrack03_Sudachi_Multiplayer
src/core/multiplayer/model_b/tests/: CMakeLists.txt  README.md  TDD_MDNS_DISCOVERY_SUMMARY.md  test_mdns_discovery.cpp  test_mdns_txt_records.cpp  test_mobile_hotspot_capabilities.cpp  test_mobile_hotspot_manager.cpp  test_runner.cpp  test_wifi_direct_permissions.cpp  test_wifi_direct_wrapper.cpp  verify_red_phase.cpp  verify_windows_red_phase.cpp
src/core/multiplayer/model_b/tests/mocks/: mock_jni_env.h  mock_mdns_socket.h  mock_winrt_apis.h
tests/: CMakeLists.txt
tests/benchmarks/: README.md  benchmark_component_performance.cpp  benchmark_connection_establishment.cpp  benchmark_latency_measurement.cpp  benchmark_main.cpp  benchmark_mocks.h  benchmark_packet_processing.cpp  benchmark_scalability_memory.cpp  benchmark_strategy.md  benchmark_utilities.h
tests/docker/: Dockerfile.test  docker-compose.test.yml
tests/integration/: game_specific_test_framework.h  test_animal_crossing.cpp  test_model_a_flow.cpp
tests/integration/game_specific/: CMakeLists.txt  test_animal_crossing_multiplayer.cpp  test_smash_bros_multiplayer.cpp  test_splatoon_multiplayer.cpp
tests/integration/game_specific/utilities/: game_test_base.h
tests/mocks/: mock_p2p_network.h  mock_platform_apis.h  mock_websocket_server.h
tests/ui/: CMakeLists.txt  CMakeLists_full.txt  README_UI_TESTS.md  test_build_verification.cpp  test_implementation_verification.cpp
tests/ui/mocks/: mock_multiplayer_backend.cpp  mock_multiplayer_backend.h  mock_qt_widgets.cpp  mock_qt_widgets.h
tests/ui/test_utilities/: qt_test_fixtures.h
tests/ui/unit/: test_connection_status_overlay.cpp  test_error_dialog_manager.cpp  test_multiplayer_mode_toggle.cpp
tests/unit/: test_connection_recovery_manager.cpp  test_error_handling.cpp  test_network_security.cpp  test_packet_protocol.cpp
tests/unit/core/: CMakeLists.txt  test_multiplayer_integration.cpp
tests/unit/hle_integration/: CMakeLists.txt  README.md  test_backend_factory.cpp  test_error_code_mapper.cpp  test_helpers.h  test_ldn_service_bridge.cpp  test_multiplayer_backend_interface.cpp  test_type_translator.cpp
(+19 files in other folders)
